--- a/templates/tutorial/includes/summary.part.html
+++ b/templates/tutorial/includes/summary.part.html
@@ -4,19 +4,24 @@
 
 
 
-<div class="mobile-menu-bloc {% if not tutorial.is_mini %}accordeon{% endif %}" data-title="Sommaire du tutoriel">
+<div class="mobile-menu-bloc {% if not tutorial.type == 'MINI' %}accordeon{% endif %}" data-title="Sommaire du tutoriel">
     <h3>Sommaire</h3>
 
-    {% if tutorial.is_mini %}
+    {% if tutorial.type == 'MINI' %}
         {# Small tutorial #}
         {% if chapter.extracts %}
-            {% for extract in chapter.extracts %}
-                <h4 data-num="{{ extract.position_in_chapter|roman }}">
-                    <a href="#{{ extract.position_in_chapter }}-{{ extract.title|slugify }}">
-                        {{ extract.title }}
-                    </a>
-                </h4>
-            {% endfor %}
+            <ul>
+                {% for extract in chapter.extracts %}
+                    <li>
+                        <a data-num="{{ extract.position_in_chapter }}"
+                           href="#{{ extract.position_in_chapter }}-{{ extract.title|slugify }}"
+                           class="mobile-menu-link mobile-menu-sublink"
+                        >
+                            {{ extract.title }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
         {% endif %}
     {% else %}
         {# Large tutorial #}
@@ -38,7 +43,7 @@
                 {% with chapters=part.chapters %}
                     <ul>
                         {% for chapter in chapters %}
-                            <li {% if chapter_current.pk = chapter.pk %}class="current"{% endif %}>
+                            <li {% if chapter_current.pk == chapter.pk %}class="current"{% endif %}>
                                 <a data-num="{{ chapter.position_in_part }}"
                                    {% if online %}
                                        href="{% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}"
@@ -50,7 +55,7 @@
                                     {{ chapter.title }}
                                 </a>
 
-                                {% if chapter_current.pk = chapter.pk %}
+                                {% if chapter_current.pk == chapter.pk %}
                                     <ul class="mobile-menu-bloc mobile-all-links" data-title="Sommaire du chapitre">
                                         {% for extract in chapter.extracts %}
                                             <li>
