Masque le bouton  sur mobile

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -913,6 +913,10 @@
             border-color: #999;
         }
     }
+
+    .open-zen-mode {
+        display: none;
+    }
 }
 .main.home .content-container {
     margin-top: 0;
