--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -38,10 +38,10 @@
 
     <h3>2. Mentions légales</h3>
     <p>
-        L'édition du site zestedesavoir.com est assurée par l'association française de loi 1901 Zeste de Savoir, déclarée à la préfecture de [lieu de déclaration] dont le siège social est situé au [adresse du siège social].
+        L'édition du site zestedesavoir.com est assurée par l'association française de loi 1901 Zeste de Savoir, déclarée à la préfecture de Vendée et parue au Journal Officiel le 19 avril 2014.
     </p>
     <p>
-        [Informations de contact : adresse courriel, Prénom + NOM du directeur de la publication et son statut au sein de l'association]
+        Vous pouvez joindre l’association via l’adresse e-mail : <a href="mailto:association@zestedesavoir.com">association@zestedesavoir.com</a>.
     </p>
     <p>
         Le site est hébergé par [Nom de la société] dont le siège social est situé [adresse du siège social].
@@ -55,7 +55,7 @@
         <li>Utilisateur : ce terme désigne toute personne qui utilise le site ou l'un des services proposés par le site.</li>
         <li>Membre : l'utilisateur devient un &laquo; Membre &raquo; dès son inscription sur le site.</li>
         <li>Contenu de l'utilisateur : ce sont les données transmises par l'utilisateur sur le site.</li>
-        <li>Lien hypertexte : </li>
+        <li>Lien hypertexte : ce terme désigne les liens consultables par les visiteurs menant à une autre page du même site ou vers un autre site web.</li>
         <li>Identifiant et mot de passe : c'est l'ensemble des informations nécessaires à l'identification d'un membre sur le site. L'identifiant et le mot de passe permettent à l'utilisateur d'accéder à des services réservés aux membres du site. Le mot de passe est une information confidentielle. </li>
     </ul>
 
@@ -73,7 +73,7 @@
         Tout événement d&ucirc; à un cas de force majeur ayant pour conséquence un dysfonctionnement du réseau ou du serveur n'engage pas la responsabilité de l'éditeur.
     </p>
     <p>
-        L'utilisateur non membre n'a pas accès aux services réservés aux membres. En effet, certaines actions sur le site sont réservées aux membres après identification à l'aide de leur identifiant et de leur mot de passe. Elles concernent principalement la rédaction d'articles ou de tutoriels et la participation active sur les forums [+&hellip; si on ajoute d'autres services comme une section dédiée aux projets ou autre].
+        L'utilisateur non membre n'a pas accès aux services réservés aux membres. En effet, certaines actions sur le site sont réservées aux membres après identification à l'aide de leur identifiant et de leur mot de passe. Elles concernent principalement la rédaction d'articles ou de tutoriels et la participation active sur les forums.
     </p>
     <p>
         Pour devenir &laquo; Membre &raquo;, l'utilisateur doit créer un compte au moyen du formulaire en ligne prévu à cet effet.
@@ -94,27 +94,13 @@
         Le site permet aux membres de publier des commentaires, des tutoriels, des articles, des messages sur les forums, de même que des messages privés entre membres [ + projets, etc. ?]. Le membre est responsable des propos tenus sur les forums et dans les commentaires d'un article ou d'un tutoriel.
     </p>
     <p>
-        Il est interdit aux membres de télécharger, diffuser, transmettre ou d'envoyer sur le site des contenus qui :
+        Il est interdit aux membres de télécharger, diffuser, transmettre ou d’envoyer sur le site des contenus qui ont un caractère injurieux ou diffamatoire, pornographique, portent atteinte à la vie privée et/ou au droit à l’image d’autrui, incitent à la commission de crimes et délits, incitent à la consommation d’alcool, du tabac ou de médicaments, mettent en péril le bon fonctionnement du site, de ses serveurs et la protection des données de zestedesavoir.com ou de ses membres et d’une manière générale, ont un caractère contraire à la législation en vigueur.
     </p>
-    <ul>
-        <li>concernent des correspondances privées entre membres et/ou d'un tiers;</li>
-        <li>ont un caractère injurieux ou diffamatoire;</li>
-        <li>ont un caractère pornographique ou pédophile;</li>
-        <li>ont un caractère portant atteinte à la vie privée et/ou au droit à l'image d'autrui;</li>
-        <li>faisant l'apologie de crimes contre l'humanité;</li>
-        <li>incitent à la commission de crimes et délits;</li>
-        <li>incitent à la consommation d'alcool, du tabac ou de médicaments;</li>
-        <li>incitent à la haine raciale ou à la discrimination, quelle que soit sa forme;</li>
-        <li>portent atteinte aux droits de propriété intellectuelle ou droits voisins d'un tiers;</li>
-        <li>portent atteinte à la dignité de la personne humaine;</li>
-        <li>mettent en péril, par l'utilisation d'un virus ou de tout autre programme susceptible d'endommager, d'altérer ou de détruire les systèmes, programmes, données ou fichiers informatiques, le bon fonctionnement du site, de ses serveurs et la protection des données de zestedesavoir.com ou de ses membres;</li>
-        <li>d'une manière générale, ont un caractère contraire à la législation en vigueur.</li>
-    </ul>
     <p>
         Cette interdiction s'applique également aux contenus auxquels donnent accès les liens hypertextes fournis par un membre sur le site.
     </p>
     <p>
-        Dans ses publications, le membre s'engage de plus à respecter les règles du site [ Note : ajouter le lien]. Par ailleurs, le site exerce une modération sur les publications et se réserve le droit de refuser leur mise en ligne, sans avoir à s'en justifier auprès du membre.
+        Dans ses publications, le membre s'engage de plus à respecter les règles du site. Par ailleurs, le site exerce une modération sur les publications et se réserve le droit de refuser leur mise en ligne, sans avoir à s'en justifier auprès du membre.
     </p>
 
     <h4>5.2 Responsabilité du contenu publié par un membre et sanctions en cas de manquement</h4>
@@ -122,7 +108,7 @@
         Les membres sont seuls responsables du contenu qu'ils publient. L'éditeur du site ne peut être considéré comme responsable du contenu transmis ou mis en ligne par les membres. Toutefois,  les utilisateurs peuvent signaler une publication manifestement contraire aux lois en vigueur, aux règles du site ou aux Conditions Générales d'Utilisation  dans le but d'un acte de modération par l'équipe du site.
     </p>
     <p>
-        En cas de manquement par un membre des règles du site et/ou des éléments ci-dessus, la modération de zestedesavoir.com peut décider de lui bloquer l'accès au site, à titre provisoire ou définitif, ou d'en limiter l'utilisation. Les différentes sanctions applicables sont inscrites dans le règlement du site [ Note : ajouter le lien]. Aucune contrepartie ne pourra être exigée.
+        En cas de manquement par un membre des règles du site et/ou des éléments ci-dessus, la modération de zestedesavoir.com peut décider de lui bloquer l'accès au site, à titre provisoire ou définitif, ou d'en limiter l'utilisation. Les différentes sanctions applicables sont inscrites dans le règlement du site. Aucune contrepartie ne pourra être exigée.
     </p>
 
     <h4>5.3 Propriété du contenu publié par un membre </h4>
@@ -133,12 +119,13 @@
         L'auteur d'un tutoriel ou d'un article a également la possibilité de mettre sa publication en ligne selon la licence &ldquo;CC&rdquo; (Creative Commons) qui lui convient le mieux parmi les licences CC suivantes :
     </p>
     <ul>
-        <li>Licence CC BY - <a href="http://creativecommons.org/licenses/by/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by/3.0/fr/legalcode">Voir le Code juridique</a></li>
-        <li>Licence CC BY-SA - <a href="http://creativecommons.org/licenses/by-sa/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-sa/3.0/fr/legalcode">Voir le Code juridique</a></li>
-        <li>Licence CC BY-ND - <a href="http://creativecommons.org/licenses/by-nd/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nd/3.0/fr/legalcode">Voir le Code juridique</a></li>
-        <li>Licence CC BY-NC - <a href="http://creativecommons.org/licenses/by-nc/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nc/3.0/fr/legalcode">Voir le Code juridique</a></li>
-        <li>Licence CC BY-NC-SA - <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/legalcode">Voir le Code juridique</a></li>
-        <li>Licence CC BY-NC-ND - <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/">Lire le résumé explicatif de la licence</a> - <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode">Voir le Code juridique</a></li>
+        <li>Licence CC 0 1.0 - <a href="http://creativecommons.org/publicdomain/zero/1.0/">Lire le résumé explicatif de la licence</a></li>
+        <li>Licence CC BY 4.0 - <a href="http://creativecommons.org/licenses/by/4.0/">Lire le résumé explicatif de la licence</a></li>
+        <li>Licence CC BY-SA 4.0 - <a href="http://creativecommons.org/licenses/by-sa/4.0/">Lire le résumé explicatif de la licence</a></li>
+        <li>Licence CC BY-ND 4.0 - <a href="http://creativecommons.org/licenses/by-nd/4.0/">Lire le résumé explicatif de la licence</a></li>
+        <li>Licence CC BY-NC 4.0 - <a href="http://creativecommons.org/licenses/by-nc/4.0/">Lire le résumé explicatif de la licence</a></li>
+        <li>Licence CC BY-NC-SA 4.0 - <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Lire le résumé explicatif de la licence</a></li>
+        <li>Licence CC BY-NC-ND 4.0 - <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Lire le résumé explicatif de la licence</a></li>
     </ul>
     <p>
         La mise en ligne d'un tutoriel ou d'un article est soumise à une validation préalable par l'éditeur du site. L'éditeur du site est libre de refuser la publication d'un tutoriel ou d'un article, sans avoir à s'en justifier auprès du membre et sans qu'aucune contrepartie puisse être exigée.
@@ -152,7 +139,7 @@
 
     <h4>5.4 Création d'un profil personnel </h4>
     <p>
-        Après inscription, tout membre dispose d'une page de profil personnelle. Ce profil recense l'ensemble de l'activité du membre sur le site (forums, signature, avatar,  articles, tutoriels, [+&hellip; si on ajoute d'autres services comme une section dédiée aux projets ou autre]) à l'exception des informations d'inscription (nom, prénom, adresse email,...) et correspondances (via le système de messagerie privée) privées.
+        Après inscription, tout membre dispose d'une page de profil personnelle. Ce profil recense l'ensemble de l'activité du membre sur le site (forums, signature, avatar, &nbsp;articles, tutoriels) à l'exception des informations d'inscription (nom, prénom, adresse email,...) et correspondances (via le système de messagerie privée) privées.
     </p>
     <p>
         Cette page de profil, accessible à tous les membres, a pour objet de permettre au membre de se présenter. Le membre est libre d'ajouter une photographie le représentant, un avatar et d'autres informations supplémentaires : biographie, formations et emploi, l'adresse des sites et/ou blog et/ou portfolio présentant les travaux du membre, comptes sur les réseaux sociaux et toute autre information au choix du membre.
@@ -173,7 +160,7 @@
         Conformément à la Loi n<sup>o</sup>78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés, le traitement des données personnelles réalisées sur le site a fait l'objet d'une déclaration auprès de la Commission Nationale Informatique et Liberté (CNIL).
     </p>
     <p>
-        Le traitement des données personnelles de chaque membre se fait conformément à la Loi Informatique et Libertés du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés. Le site est déclaré à la CNIL sous le numéro [numéro].
+        Le traitement des données personnelles de chaque membre se fait conformément à la Loi Informatique et Libertés du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.
     </p>
     <p>
         L'éditeur du site s'engage à assurer un niveau de protection suffisant des informations fournies dans le but de garantir le respect de la vie privée conformément aux prescriptions légales.
@@ -246,7 +233,7 @@
 
     <h4>7.2 Code source du site</h4>
     <p>
-        [A compléter par les informations de licence du code source]
+        Zeste de Savoir est un site dont le code source est sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>, et provient en partie de <a href="http://progdupeu.pl">Progdupeupl</a>.
     </p>
 
     <h4>7.3 Politique de signalement d'abus</h4>
