--- a/templates/tutorial/tutorial/view.html
+++ b/templates/tutorial/tutorial/view.html
@@ -32,9 +32,8 @@
     {% endif %}
 
     <ul class="taglist">
-        {% for category in tutorial.subcategory.all %}
-            {# TODO : ajouter les liens des tags #}
-            <li><a href="#">{{ category.title }}</a></li>
+        {% for catofsubcat in tutorial.subcategory.all %}
+            <li><a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}">{{ catofsubcat.title }}</a></li>
         {% endfor %}
     </ul>
 
