--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -30,9 +30,8 @@
     </h3>
 
     <ul class="taglist">
-        {% for category in tutorial.subcategory.all %}
-            {# TODO : ajouter les liens des tags #}
-            <li><a href="#">{{ category.title }}</a></li>
+        {% for catofsubcat in tutorial.subcategory.all %}
+            <li><a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}">{{ catofsubcat.title }}</a></li>
         {% endfor %}
     </ul>
 
