MaJ des CGU avec l'hébergeur : OVH

--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -44,7 +44,7 @@
         Vous pouvez joindre l’association via l’adresse e-mail : <a href="mailto:association@zestedesavoir.com">association@zestedesavoir.com</a>.
     </p>
     <p>
-        Le site est hébergé par [Nom de la société] dont le siège social est situé [adresse du siège social].
+        Le site est hébergé par OVH dont le siège social est situé 2 rue Kellermann - 59100 Roubaix - France.
     </p>
     <p>
         Le site est enregistré auprès de la CNIL sous le numéro [numéro d'enregistrement].
@@ -91,7 +91,7 @@
     <h3>5. Contenu de l'utilisateur</h3>
     <h4>5.1 Généralités </h4>
     <p>
-        Le site permet aux membres de publier des commentaires, des tutoriels, des articles, des messages sur les forums, de même que des messages privés entre membres [ + projets, etc. ?]. Le membre est responsable des propos tenus sur les forums et dans les commentaires d'un article ou d'un tutoriel.
+        Le site permet aux membres de publier des commentaires, des tutoriels, des articles, des messages sur les forums, de même que des messages privés entre membres. Le membre est responsable des propos tenus sur les forums et dans les commentaires d'un article ou d'un tutoriel.
     </p>
     <p>
         Il est interdit aux membres de télécharger, diffuser, transmettre ou d’envoyer sur le site des contenus qui ont un caractère injurieux ou diffamatoire, pornographique, portent atteinte à la vie privée et/ou au droit à l’image d’autrui, incitent à la commission de crimes et délits, incitent à la consommation d’alcool, du tabac ou de médicaments, mettent en péril le bon fonctionnement du site, de ses serveurs et la protection des données de zestedesavoir.com ou de ses membres et d’une manière générale, ont un caractère contraire à la législation en vigueur.
