--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     <script>
         WebFontConfig = {
             google: {
-              families: ['Source Sans Pro', 'Source Sans Pro', 'Droid Serif']
+              families: ['Source Sans Pro', 'Source Code Pro', 'Merriweather']
             }
         };
 
@@ -47,7 +47,7 @@
     </script>
     -->
     <!-- TEMP : load fonts from Google / Procude FOUT effect (see above) -->
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro|Droid+Serif' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro|Merriweather' rel='stylesheet' type='text/css'>
 
 
     {# for additionnal css in some pages #}
