--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -40,10 +40,10 @@ $modal-margin: 25px;
 // Font Famillies
 $font-sans-serif: "Segoe UI", "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
 $font-serif: "Liberation Serif", "Times New Roman", Times, Georgia, FreeSerif, serif;
-$monospace: monospace, serif;
+$font-monospace: monospace, serif;
 $font-sans-serif-active: "Source Sans Pro", $font-sans-serif;
-$font-serif-active: "Droid Serif", $font-serif;
-$monospace-active: "Source Code Pro", $monospace;
+$font-serif-active: "Merriweather", $font-serif;
+$font-monospace-active: "Source Code Pro", $font-monospace;
 
 
 /**
