Ajoute la police sans-serif sur les ol

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -1444,7 +1444,8 @@
 
     .article-content {
         p,
-        ul:not(.pagination) {
+        ul:not(.pagination),
+        ol {
             font-family: $font-serif;
         }
     }
@@ -1631,7 +1632,8 @@
 .wf-active .main .content-container {
     .article-content {
         p,
-        ul:not(.pagination) {
+        ul:not(.pagination),
+        ol {
             font-family: $font-serif-active;
         }
     }
