--- a/templates/base.html
+++ b/templates/base.html
@@ -446,7 +446,7 @@
                             </div>
 
                         {% else %} {# Not logged #}
-                            <a href="{% url "zds.member.views.login_view" %}">Connexion</a>
+                            <a href="{% url "zds.member.views.login_view" %}?next={{ request.build_absolute_uri }}">Connexion</a>
                             <a href="{% url "zds.member.views.register_view" %}">Inscription</a>
                         {% endif %}
                     </div>
