--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -2377,6 +2377,39 @@ form.topic-message {
     }
 }
 
+/* ==============
+    ALL: Autocompletion
+   ============== */
+
+.autocomplete-wrapper {
+    position: relative;
+    .autocomplete-dropdown {
+        position: absolute;
+        
+        ul {
+            padding: 0;
+            margin: 0;
+            background-color: #FFF;
+            border-right: solid 1px #CCC;
+            border-left: solid 1px #CCC;
+
+            border-bottom-right-radius: 4px;
+            border-bottom-left-radius: 4px;
+
+            li {
+                padding: 4px 10px;
+                border-bottom: solid 1px #CCC;
+                list-style: none;
+
+                &.active, &:hover {
+                    background-color: lighten($blue, 10%);
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
 
 /* ==============
     ALL: Footer
