Changé la couleur des <kbd>

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1619,7 +1619,7 @@
         }
 
         kbd {
-            $kbd-color: #F1F0D3;
+            $kbd-color: #F1F1F1;
             background-color: $kbd-color;
             padding: 2px 6px;
             border-radius: 3px;
