--- a/templates/forum/post/new.html
+++ b/templates/forum/post/new.html
@@ -1,6 +1,7 @@
 {% extends "forum/base.html" %}
 {% load profile %}
 {% load crispy_forms_tags %}
+{% load captureas %}
 
 
 
@@ -38,4 +39,35 @@
     {% if form.text.value %}
         {% include "misc/previsualization.part.html" with text=form.text.value %}
     {% endif %}
+    <hr />
+
+    <div class="content-wrapper">
+        {% for message in posts %}
+            {% captureas edit_link %}
+                {% url "zds.forum.views.edit_post" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas cite_link %}
+                {% url "zds.forum.views.answer" %}?sujet={{ topic.pk }}&amp;cite={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas helpful_link %}
+                {% url "zds.forum.views.useful_post" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas upvote_link %}
+                {% url "zds.forum.views.like_post" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas downvote_link %}
+                {% url "zds.forum.views.dislike_post" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas alert_solve_link %}
+                {% url "zds.forum.views.solve_alert" %}
+            {% endcaptureas %}
+
+            {% include "misc/message.part.html" with perms_change=perms.forum.change_topic %}
+        {% endfor %}
+    </div>
 {% endblock %}
