--- a/assets/scss/_mobile-tablet.scss
+++ b/assets/scss/_mobile-tablet.scss
@@ -13,21 +13,21 @@
         &:not(.swipping) {
             .page-container,
             .mobile-menu {
-                @include transition-property(transform);
-                @include transition-duration(.3s);
-                @include transition-timing-function(ease);
+                transition-property: transform;
+                transition-duration: .3s;
+                transition-timing-function: ease;
             }
         }
         &.swipping * {
-            @include user-select(none);
-            @include pointer-events(none);
+            user-select: none;
+            pointer-events: none;
         }
     }
 
     .js .page-container {
         position: absolute;
         z-index: 10;
-        @include transform(translate3d(0, 0, 0));
+        transform: translate3d(0, 0, 0);
     }
     .js .mobile-menu {
         display: block;
@@ -36,12 +36,12 @@
         overflow-x: hidden;
         overflow-y: auto;
         z-index: 1;
-        @include transform(translate3d(-20%, 0, 0));
+        transform: translate3d(-20%, 0, 0);
         width: 90%;
         height: 100%;
         padding-bottom: 20px;
         background: #222;
-        @include user-select(none);
+        user-select: none;
 
         .search {
             height: 50px;
@@ -188,13 +188,13 @@
 
         .page-container {
             height: 100%;
-            @include transform(translate3d(90%, 0, 0));
+            transform: translate3d(90%, 0, 0);
             overflow: hidden;
-            @include box-shadow(0 0 7px rgba(0, 0, 0, .25));
+            box-shadow: 0 0 7px rgba(0, 0, 0, .25);
         }
 
         .mobile-menu {
-            @include transform(translate3d(0, 0, 0));
+            transform: translate3d(0, 0, 0);
         }
     }
 
