--- a/assets/scss/_tablet.scss
+++ b/assets/scss/_tablet.scss
@@ -8,7 +8,7 @@
 
 @media only screen and (min-width: 760px) {
     .dropdown {
-        @include box-shadow(0 5px 7px rgba(0, 0, 0, .3));
+        box-shadow: 0 5px 7px rgba(0, 0, 0, .3);
     }
 
     .header-right {
@@ -32,7 +32,7 @@
                 &::-webkit-scrollbar-thumb {
                     background-color: #396a81;
                     border: 1px solid #06354a;
-                    @include transition;
+                    transition: all $default-transition-duration ease;
 
                     &:hover {
                         background-color: #5196b6;
